[package]
name = "xmly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.18.2", features = ["full"] }
toml = {version="0.5.*"}
serde = { version = "1.*", features = ["derive"] }
serde_json = {version = "1"}
lazy_static = {version = "1.4.*"}
chrono = {version = "0.4"}